# Adaptive_FAST_LIO2

./: .gitignore
experiments/m3dgr_corridor02/: README.md  analyze_runtime_comparison.py  evaluate_endpoint_ground_truth.py
experiments/m3dgr_corridor02/analysis/: endpoint_ground_truth_evaluation.csv  runtime_report.txt  runtime_summary.csv
experiments/m3dgr_corridor02/groud_truth/: GTCorridor02.txt
experiments/m3dgr_corridor02/ppt/: adaptive_fast_lio2_idea_and_experiment.pptx  generate_adaptive_fastlio_ppt.py
experiments/m3dgr_corridor02/results/: adaptive_off_runtime.csv  adaptive_runtime.csv
experiments/subt_mrs_hawkins_long_corridor/results/: adaptive_runtime.csv  adaptive_runtime.tum  adaptive_runtime_latest.tum  ate_comparison.csv  experiment_analysis.md  fastlio_runtime_external.csv  fastlio_runtime_external.tum  fastlio_runtime_external_latest.tum  liosam_runtime_external.csv  liosam_runtime_external.tum  subt_ground_truth.tum  three_way_comparison.csv
scripts/: csv_to_tum.py  fix_subt_points_bag.py  plot_trajectory_comparison.py
src/FAST_LIO/: CMakeLists.txt
src/FAST_LIO/config/: geode_urban_tunnel_alpha.yaml  m2dgr_plus_street1.yaml  m3dgr_mid360.yaml  newer_college.yaml  subt_mrs_hawkins_long_corridor.yaml
src/FAST_LIO/launch/: mapping.launch.py
src/FAST_LIO/rviz/: fastlio.rviz
src/FAST_LIO/src/: fastlio_runtime_recorder.cpp  laserMapping.cpp  preprocess.cpp  preprocess.h
src/LIO-SAM/: CMakeLists.txt
src/LIO-SAM/config/: rviz2.rviz  subt_mrs_hawkins_long_corridor.yaml
src/LIO-SAM/launch/: run.launch.py
src/LIO-SAM/src/: imuPreintegration.cpp  (+1 more)
src/adaptive_fast_lio2/: .gitignore  CMakeLists.txt  package.xml
src/adaptive_fast_lio2/config/: adaptive_fast_lio2.yaml  geode_urban_tunnel_alpha.yaml  hku_mb.yaml  m2dgr_plus_street1.yaml  m3dgr_mid360.yaml  newer_college.yaml  nya_03.yaml  subt_mrs_hawkins_long_corridor.yaml  subt_mrs_tartanair_sewerage.yaml
src/adaptive_fast_lio2/include/adaptive_fast_lio2/: adaptive_common.hpp  adaptive_imu_process.hpp  adaptive_map_manager.hpp  adaptive_preprocess.hpp  adaptive_runtime_logger.hpp  adaptive_state.hpp
src/adaptive_fast_lio2/launch/: adaptive_fast_lio2.launch.py
src/adaptive_fast_lio2/rviz/: fastlio.rviz
src/adaptive_fast_lio2/src/: adaptive_imu_process.cpp  adaptive_laserMapping.cpp  adaptive_map_manager.cpp  adaptive_preprocess.cpp  adaptive_runtime_logger.cpp
(+2 files in other folders)
